--- a/src/crud-users.html
+++ b/src/crud-users.html
@@ -132,7 +132,7 @@
     </div>
   </body>
   <script type="text/javascript" src="./utils/handleUser.js"></script>
-  <script type="text/javascript" src="./utils/permission.js"></script>
+  <!-- <script type="text/javascript" src="./utils/permission.js"></script> -->
   <script type="text/javascript" src="./constants/index.js"></script>
   <script type="text/javascript" src="./db/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
