--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Home Page</title>
+    <title>Solaris Power - Página Inicial</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -20,7 +20,7 @@
   <body>
     <div id="BaseLayoutContainer">
       <header class="text-white text-center py-2">
-        <h1>Home</h1>
+        <h1>Página Inicial - Solaris Power</h1>
       </header>
       <div id="sidebar">
         <div
