--- a/src/register.html
+++ b/src/register.html
@@ -101,7 +101,9 @@
       </div>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./api/index.js"></script>
   <script type="text/javascript" src="./db/index.js"></script>
 </html>
