--- a/src/account.html
+++ b/src/account.html
@@ -182,7 +182,7 @@
   <script type="text/javascript" src="./utils/handleUser.js"></script>
   <script type="text/javascript" src="./utils/permission.js"></script>
   <script type="text/javascript" src="./constants/index.js"></script>
-  
+  <script type="text/javascript" src="./api/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
