--- a/src/crud-itens.html
+++ b/src/crud-itens.html
@@ -147,7 +147,9 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Add Product</h5>
+                <h5 class="modal-title" id="exampleModalLabel">
+                  Product Details
+                </h5>
                 <button
                   type="button"
                   class="btn-close"
@@ -216,6 +218,13 @@
                       required
                     />
                   </div>
+                  <input
+                    type="hidden"
+                    id="productId"
+                    name="productId"
+                    value=""
+                  />
+
                   <div class="modal-footer">
                     <button
                       type="button"
@@ -239,27 +248,48 @@
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="./utils/handleUser.js"></script>
-  <script type="text/javascript" src="./utils/index.js"></script>
-  <script type="text/javascript" src="./utils/permission.js"></script>
-  <script type="text/javascript" src="./constants/index.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
     integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
+  <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./utils/index.js"></script>
+  <script type="text/javascript" src="./utils/permission.js"></script>
+  <script type="text/javascript" src="./constants/index.js"></script>
+  <script type="text/javascript" src="./api/index.js"></script>
   <script type="text/javascript" src="./services/dataTableItens.js"></script>
   <script>
+    const ajax = new AjaxService();
+
     $(document).ready(function () {
+      $("#itensTable").on("click", ".edit-button", function () {
+        const rowData = $("#itensTable")
+          .DataTable()
+          .row($(this).closest("tr"))
+          .data();
+
+        $("#productId").val(rowData.id);
+        $("#productName").val(rowData.name);
+        $("#productDescription").val(rowData.description);
+        $("#productQuantity").val(rowData.amount);
+        $("#productPrice").val(rowData.price);
+        $("#productImageUrl").val(rowData.imgURL);
+
+        $("#modalProducts").modal("show");
+      });
+
       $("#productForm").submit(function (event) {
         event.preventDefault();
 
         const formData = {
+          productId: $("#productId").val(),
           productName: $("#productName").val(),
           productDescription: $("#productDescription").val(),
           productQuantity: $("#productQuantity").val(),
@@ -267,35 +297,13 @@
           productImageUrl: $("#productImageUrl").val(),
         };
 
-        createProduct(formData);
-
+        if (formData.productId) {
+          ajax.editProduct(formData);
+        } else {
+          ajax.createProduct(formData);
+        }
         $("#modalProducts").modal("hide");
       });
     });
-  </script>
-  <script>
-    const createProduct = (formData) => {
-      return new Promise((resolve, reject) => {
-        const xhr = new XMLHttpRequest();
-
-        xhr.open("POST", "http://localhost:3333/api/products", true);
-        xhr.setRequestHeader("Content-Type", "application/json");
-
-        xhr.onreadystatechange = function () {
-          if (xhr.readyState === 4) {
-            if (xhr.status === 201) {
-              resolve(JSON.parse(xhr.responseText));
-              window.location.reload();
-            } else {
-              reject(new Error(`Error in request: ${xhr.status}`));
-            }
-          }
-        };
-
-        const jsonData = JSON.stringify(formData);
-
-        xhr.send(jsonData);
-      });
-    };
   </script>
 </html>
